<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.stephencordasco.mathtutor.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:text="@string/practice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/practiceBtn"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:background="@android:color/holo_blue_bright"
        android:textColor="@android:color/holo_orange_dark"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="casual" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_the_math_tutor"
        android:id="@+id/welcomeMsg"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        android:textAlignment="center"
        android:background="@android:color/transparent"
        android:fontFamily="casual"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/testBtn"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:background="@android:color/holo_red_light"
        android:textColor="@android:color/holo_green_light"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:fontFamily="casual" />
</RelativeLayout>
