<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_practice_set_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.stephencordasco.mathtutor.PracticeSetUpActivity"
    android:background="@drawable/numbers">

    <TextView
        android:text="@string/select_math_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/select_math_type"
        android:textSize="18sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <Spinner
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:id="@+id/math_type_spinner"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/select_math_type"
        android:layout_toEndOf="@+id/select_math_type" />

    <TextView
        android:text="@string/select_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/select_difficulty"
        android:textSize="18sp"
        android:layout_below="@id/math_type_spinner"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="36dp" />

    <Spinner
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:id="@+id/difficulty_spinner"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/select_difficulty"
        android:layout_toEndOf="@+id/select_difficulty"
        android:layout_marginTop="60dp" />

    <Button
        android:text="@string/begin_prac_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/begin_practice_btn"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        android:background="@android:color/holo_blue_bright"
        android:fontFamily="casual"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="28dp"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"/>

</RelativeLayout>
